spesial update, table view, timer, report filters, new options, billing layout options #2

--- a/assets/desktop/css/ext-modules.css
+++ b/assets/desktop/css/ext-modules.css
@@ -67,3 +67,6 @@
 .btn-warning {
 	background-image:url(../icons/fam/bullet_error.png) !important;
 }
+.icon-keyboard {
+	background-image:url(../icons/fam/keyboard.png) !important;
+}
